#120  Removed deprecated apache  module