@@ -2,34 +2,20 @@ package com.applozic.mobicomkit.api;
 
 import android.content.Context;
 import android.text.TextUtils;
+import android.util.Base64;
 import android.util.Log;
 
 import com.applozic.mobicomkit.api.account.user.MobiComUserPreference;
 
-import org.apache.http.HttpEntity;
-import org.apache.http.HttpRequest;
-import org.apache.http.HttpResponse;
-import org.apache.http.NameValuePair;
-import org.apache.http.auth.AuthenticationException;
-import org.apache.http.auth.UsernamePasswordCredentials;
-import org.apache.http.client.ClientProtocolException;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.entity.UrlEncodedFormEntity;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.entity.StringEntity;
-import org.apache.http.impl.auth.BasicScheme;
-import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.util.EntityUtils;
-
 import java.io.BufferedReader;
+import java.io.DataOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.net.ConnectException;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.util.List;
+import java.net.HttpURLConnection;
+import java.net.PasswordAuthentication;
+import java.net.URL;
 
 
 /**
@@ -61,50 +47,46 @@ public class HttpRequestUtils {
         Log.i(TAG, message);
     }
 
-    public InputStream getInputStreamFromUrl(String url)
-            throws Exception {
-        HttpClient httpclient = new DefaultHttpClient();
-        HttpResponse response = httpclient.execute(new HttpGet(url));
-        return response.getEntity().getContent();
-    }
-
-    public String postData(UsernamePasswordCredentials credentials, String url, String contentType, String accept, String data) {
-        return postData(credentials, url, contentType, accept, data, null);
-    }
-
-    public String postData(UsernamePasswordCredentials credentials, String url, String contentType, String accept, String data, List<NameValuePair> nameValuePairs) {
-        Log.i(TAG, "Calling url: " + url);
-        HttpPost request = new HttpPost();
+    public String postData(PasswordAuthentication credentials, String urlString, String contentType, String accept, String data) {
+        Log.i(TAG, "Calling url: " + urlString);
+        HttpURLConnection connection;
+        URL url;
         try {
-            request.setURI(new URI(url));
-            addGlobalHeaders(request);
-            if (nameValuePairs != null && !nameValuePairs.isEmpty()) {
-                request.setEntity(new UrlEncodedFormEntity(nameValuePairs));
-            }
+            url = new URL(urlString);
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("POST");
+            connection.setDoInput(true);
+            connection.setDoOutput(true);
+
             if (!TextUtils.isEmpty(contentType)) {
-                request.addHeader("Content-Type", contentType);
+                connection.setRequestProperty("Content-Type", contentType);
             }
             if (!TextUtils.isEmpty(accept)) {
-                request.addHeader("Accept", accept);
+                connection.setRequestProperty("Accept", accept);
+            }
+            addGlobalHeaders(connection);
+            connection.connect();
+
+            if (connection == null) {
+                return null;
             }
 
-            //request.addHeader(new BasicScheme().authenticate(credentials, request));
-            HttpClient httpclient = new DefaultHttpClient();
-
-            if (nameValuePairs != null && !nameValuePairs.isEmpty()) {
-                request.setEntity(new UrlEncodedFormEntity(nameValuePairs));
+            byte[] dataBytes = data.getBytes("UTF-8");
+            DataOutputStream os = new DataOutputStream(connection.getOutputStream());
+            os.write(dataBytes);
+            os.flush();
+            os.close();
+            BufferedReader br = null;
+            if(connection.getResponseCode() == 200){
+                InputStream inputStream = connection.getInputStream();
+                br = new BufferedReader(new InputStreamReader(inputStream, "UTF-8"));
             }
-
-            if (!TextUtils.isEmpty(data)) {
-                request.setEntity(new StringEntity(data, "UTF-8"));
-            }
-            HttpEntity httpEntity = httpclient.execute(request).getEntity();
-            BufferedReader br = new BufferedReader(new InputStreamReader(httpEntity.getContent(), "UTF-8"));
             StringBuilder sb = new StringBuilder();
             try {
-                String line;
-                while ((line = br.readLine()) != null) {
-                    sb.append(line);
+                String line;if(br != null){
+                    while ((line = br.readLine()) != null) {
+                        sb.append(line);
+                    }
                 }
             } catch (IOException e) {
                 e.printStackTrace();
@@ -113,13 +95,7 @@ public class HttpRequestUtils {
             }
             Log.i(TAG, "Response: " + sb.toString());
             return sb.toString();
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
-        } catch (ClientProtocolException e) {
-            e.printStackTrace();
         } catch (IOException e) {
-            e.printStackTrace();
-        } catch (AuthenticationException e) {
             e.printStackTrace();
         } catch (Exception e) {
             e.printStackTrace();
@@ -129,7 +105,7 @@ public class HttpRequestUtils {
     }
 
     public String getStringFromUrl(String url) throws Exception {
-        BufferedReader br;
+     /*   BufferedReader br;
         br = new BufferedReader(new InputStreamReader(getInputStreamFromUrl(url), "UTF-8"));
         StringBuilder sb = new StringBuilder();
         try {
@@ -140,24 +116,49 @@ public class HttpRequestUtils {
         } catch (IOException e) {
             e.printStackTrace();
         }
+        return sb.toString();*/
+        return null;
+    }
+
+    public String postJsonToServer(String StringUrl, String data) throws Exception {
+        HttpURLConnection connection;
+        URL url = new URL(StringUrl);
+        connection = (HttpURLConnection) url.openConnection();
+        connection.setRequestMethod("POST");
+        connection.setRequestProperty("Content-Type", "application/json");
+        connection.setDoInput(true);
+        connection.setDoOutput(true);
+        connection.connect();
+
+        byte[] dataBytes = data.getBytes("UTF-8");
+        DataOutputStream os = new DataOutputStream(connection.getOutputStream());
+        os.write(dataBytes);
+        os.flush();
+        os.close();
+        BufferedReader br = null;
+        if(connection.getResponseCode() == HttpURLConnection.HTTP_OK){
+            InputStream inputStream = connection.getInputStream();
+            br = new BufferedReader(new InputStreamReader(inputStream, "UTF-8"));
+        }else {
+            Log.i(TAG,"Response code postJson is :"+connection.getResponseCode());
+        }
+        StringBuilder sb = new StringBuilder();
+        try {
+            String line;
+            if(br != null){
+                while ((line = br.readLine()) != null) {
+                    sb.append(line);
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        Log.i(TAG, "Response: " + sb.toString());
         return sb.toString();
     }
 
-    public String postJsonToServer(String url, String data) throws Exception {
-        HttpClient httpclient = new DefaultHttpClient();
-        HttpPost httppost = new HttpPost(url);
-        httppost.addHeader("Content-Type", "application/json");
-        addGlobalHeaders(httppost);
-        HttpEntity entity = new StringEntity(data, "UTF-8");
-        httppost.setEntity(entity);
-        HttpResponse httpResponse = httpclient.execute(httppost);
-        String response = EntityUtils.toString(httpResponse.getEntity());
-        log("response for post call is:" + response);
-        return response;
-    }
-
     public String getStringFromUrlWithPost(String url, String data) throws Exception {
-        HttpClient httpclient = new DefaultHttpClient();
+       /* HttpClient httpclient = new DefaultHttpClient();
         HttpPost httppost = new HttpPost(url);
         httppost.addHeader("Content-Type", "application/xml");
         addGlobalHeaders(httppost);
@@ -166,78 +167,96 @@ public class HttpRequestUtils {
         HttpResponse httpResponse = httpclient.execute(httppost);
         String response = EntityUtils.toString(httpResponse.getEntity());
         log("response for post call is: " + response);
-        return response;
+        return response;*/
+        return  null;
     }
 
-    public String getResponse(UsernamePasswordCredentials credentials, String url, String contentType, String accept) {
-        Log.i(TAG, "Calling url: " + url);
-        HttpGet request = new HttpGet();
+    public String getResponse(PasswordAuthentication credentials, String urlString, String contentType, String accept) {
+        Log.i(TAG, "Calling url: " + urlString);
+
+        HttpURLConnection connection = null;
+        URL url;
+
         try {
-            request.setURI(new URI(url));
+            url = new URL(urlString);
+            connection = (HttpURLConnection) url.openConnection();
+            connection.setInstanceFollowRedirects(true);
+            connection.setRequestMethod("GET");
+            connection.setUseCaches(false);
+            connection.setDoInput(true);
+
             if (!TextUtils.isEmpty(contentType)) {
-                request.addHeader("Content-Type", contentType);
+                connection.setRequestProperty("Content-Type", contentType);
             }
             if (!TextUtils.isEmpty(accept)) {
-                request.addHeader("Accept", accept);
+                connection.setRequestProperty("Accept", accept);
             }
+            addGlobalHeaders(connection);
+            connection.connect();
 
-            //request.addHeader(new BasicScheme().authenticate(credentials, request));
-            addGlobalHeaders(request);
-
-            HttpClient httpclient = new DefaultHttpClient();
-            HttpEntity httpEntity = httpclient.execute(request).getEntity();
-            if (httpEntity == null) {
+            if (connection == null) {
                 return null;
             }
-            BufferedReader br = new BufferedReader(new InputStreamReader(httpEntity.getContent(), "UTF-8"));
+            BufferedReader br = null;
+            if(connection.getResponseCode() == HttpURLConnection.HTTP_OK){
+                InputStream inputStream = connection.getInputStream();
+                br = new BufferedReader(new InputStreamReader(inputStream, "UTF-8"));
+            }else {
+                Log.i(TAG,"Response code for getResponse is  :"+connection.getResponseCode());
+            }
+
             StringBuilder sb = new StringBuilder();
             try {
                 String line;
-                while ((line = br.readLine()) != null) {
-                    sb.append(line);
+                if (br != null){
+                    while ((line = br.readLine()) != null) {
+                        sb.append(line);
+                    }
                 }
-            } catch (IOException e) {
-                e.printStackTrace();
             } catch (Exception e) {
                 e.printStackTrace();
             }
             return sb.toString();
         } catch (ConnectException e) {
             Log.i(TAG, "failed to connect Internet is not working");
-        } catch (URISyntaxException e) {
-            e.printStackTrace();
-        } catch (AuthenticationException e) {
-            e.printStackTrace();
-        } catch (ClientProtocolException e) {
-            e.printStackTrace();
-        } catch (IOException e) {
-            e.printStackTrace();
         } catch (Exception e) {
             e.printStackTrace();
+        } finally {
+            if (connection != null) {
+                try {
+                    connection.disconnect();
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+            }
         }
         return null;
     }
 
-    public void addGlobalHeaders(HttpRequest request) throws AuthenticationException {
-        request.addHeader(APPLICATION_KEY_HEADER, MobiComKitClientService.getApplicationKey(context));
-        request.addHeader(SOURCE_HEADER, SOURCE_HEADER_VALUE);
-        request.addHeader(USERID_HEADER, USERID_HEADER_VALUE);
-        request.addHeader(DEVICE_KEY_HEADER, MobiComUserPreference.getInstance(context).getDeviceKeyString());
-
-        MobiComUserPreference userPreferences = MobiComUserPreference.getInstance(context);
-        if (userPreferences.isRegistered()) {
-            request.addHeader(new BasicScheme().authenticate(getCredentials(), request));
+    public void addGlobalHeaders(HttpURLConnection connection) {
+        try {
+            connection.setRequestProperty(APPLICATION_KEY_HEADER, MobiComKitClientService.getApplicationKey(context));
+            connection.setRequestProperty(SOURCE_HEADER, SOURCE_HEADER_VALUE);
+            connection.setRequestProperty(USERID_HEADER, USERID_HEADER_VALUE);
+            connection.setRequestProperty(DEVICE_KEY_HEADER, MobiComUserPreference.getInstance(context).getDeviceKeyString());
+            MobiComUserPreference userPreferences = MobiComUserPreference.getInstance(context);
+            if (userPreferences.isRegistered()) {
+                String userCredentials = getCredentials().getUserName() + ":" +String.valueOf(getCredentials().getPassword());
+                String basicAuth = "Basic " + Base64.encodeToString(userCredentials.getBytes(), Base64.NO_WRAP);
+                connection.setRequestProperty("Authorization", basicAuth);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
 
-    public UsernamePasswordCredentials getCredentials() {
+    public PasswordAuthentication getCredentials() {
         MobiComUserPreference userPreferences = MobiComUserPreference.getInstance(context);
         if (!userPreferences.isRegistered()) {
             return null;
         }
-        return new UsernamePasswordCredentials(userPreferences.getUserId(), userPreferences.getDeviceKeyString());
+        return new PasswordAuthentication(userPreferences.getUserId(), userPreferences.getDeviceKeyString().toCharArray());
     }
-
 
 }
